# rtc6-fastcs

./: .copier-answers.yml  .gitignore  Dockerfile  README.md  pyproject.toml  rebuild_bindings.sh
.github/: CONTRIBUTING.md
.github/workflows/: _test.yml  ci.yml
correction_files/: D2_2034.ct5  coord_transform
src/rtc6_fastcs/: __main__.py  cut_shapes.py  device.py  install_library.sh  plan_stubs.py
src/rtc6_fastcs/bindings/: CMakeLists.txt  __init__.py  rtc6_bindings.cpp  rtc6_bindings.pyi
src/rtc6_fastcs/controller/: __init__.py  rtc_connection.py  rtc_controller.py
src/rtc6_fastcs/rtc6_bindings/: CMakeLists.txt  __init__.py  rtc6_bindings.cpp
tests/: test_bindings.py  test_cli.py
