cmake_minimum_required(VERSION 2.8.12)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY /workspaces/rtc6-controller/src/rtc6_fastcs/rtc6_bindings)
project(rtc6_bindings)
find_package(pybind11 REQUIRED PATHS /venv/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/)
pybind11_add_module(rtc6_bindings rtc6_bindings.cpp)
